# gpt-assistant

./: Cargo.toml  flake.nix
src/: main.rs
