[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.24.1"
async-stream = "0.3.5"
futures-util = "0.3.30"
iced = "0.13.1"
rdev = "0.5.3"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
xcap = "0.0.13"
base64 = "0.22.1"
image = { version = "0.25.2", features = ["rayon", "png"], default-features = false }
thiserror = "1.0.64"
